# hls-minimal-reproducible-example

./: broken.cabal
prelude/: CustomPrelude.hs
